--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,22 @@
     <string name="app_name">GoRide</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email">Email</string>
+    <string name="password">password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="slogan">Ride Smarter , Not Harder</string>
+    <string name="forget_password">Forget Password?</string>
+    <string name="choose">Choose</string>
+    <string name="sign_up_for_rider">Sign Up For Rider</string>
+    <string name="sign_up_for_driver">Sign Up For Driver</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="phone">Phone</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="by_signing_up_you_agree_to_our_terms_and_conditions">By signing up, you agree to our Terms and Conditions</string>
+    <string name="age">Age</string>
+    <string name="age_helper">write your age Like 21</string>
+    <string name="gays_are_not_allowed">Gays are not allowed</string>
 </resources>
