--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
     <string name="done">Done</string>
     <string name="available_trips">Available Trips</string>
     <string name="pick_up_location">pick up location $location </string>
+    <string name="home_many_riders">Home Many Riders</string>
+    <string name="when">when ?</string>
+    <string name="click">click</string>
     <array name="vehicle_type">
         <item>Taxi</item>
         <item>Bus</item>
