--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="request_a_ride">Request A Ride</string>
     <string name="request_dialog">your about to request a trip \n so be there on 2 mins \n or your request will be cancelled</string>
     <string name="cancel">cancel</string>
+    <string name="driver_name">Driver Name</string>
+    <string name="car_number">Car Number</string>
     <array name="vehicle_type">
         <item>Taxi</item>
         <item>Bus</item>
