--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="driver_name">Driver Name</string>
     <string name="car_number">Car Number</string>
     <string name="available">Available</string>
+    <string name="coming_soon">coming soon</string>
     <array name="vehicle_type">
         <item>Taxi</item>
         <item>Bus</item>
