profile layout done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="coming_soon">coming soon</string>
     <string name="continue_">Continue</string>
     <string name="car_info">Car Info</string>
+    <string name="setting_">setting</string>
+    <string name="under_development">Under Development</string>
     <array name="vehicle_type">
         <item>Taxi</item>
         <item>Bus</item>
