dialog suggest trip:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,12 @@
     <string name="under_development">Under Development</string>
     <string name="from_sadat_city">From: Sadat city</string>
     <string name="to_badr_city">To: Badr city</string>
+    <string name="_from"> From: </string>
+    <string name="_to"> To: </string>
     <string name="_100">100</string>
+    <string name="fare">Fare</string>
+    <string name="fare_example">Fare: 5.00</string>
+    <string name="save">save</string>
     <array name="vehicle_type">
         <item>Taxi</item>
         <item>Bus</item>
