--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="fare">Fare</string>
     <string name="fare_example">Fare: 5.00</string>
     <string name="save">save</string>
+    <string name="_error">Error</string>
     <array name="vehicle_type">
         <item>Taxi</item>
         <item>Bus</item>
